kubernetes/networkpolicy/mongodb-policy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy


metadata:

  name: mongodb-policy

  namespace: three-tier-app



spec:


  podSelector:

    matchLabels:

      app: mongodb



  policyTypes:


  - Ingress



  ingress:


  # Only backend can access database

  - from:


    - podSelector:

        matchLabels:

          app: backend


    ports:


    - protocol: TCP

      port: 27017
